--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,30 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+:root{
+  --spacing-horizontal: 200px;
+  --mobile-spacing-horizontal: 40px;
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --heading-font: 40px;
+  --body-font: 16px;
+  
+  --color-heading-light:  #D5DEE7;
+  --color-body-light:     #C1CEDB;
+
+  --color-heading-dark:  #0D141E;
+  --color-body-dark:     #6A7380;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  font-family:  "Crimson Text", serif;
+  font-weight:  400;
+  font-style:   normal;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h1, h2,h3,h4,h5,h6, p{
+  margin:0;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+body {
+  margin:0;
 }
