--- a/src/app/styles/CommitedToSuccess.css
+++ b/src/app/styles/CommitedToSuccess.css
@@ -1,6 +1,7 @@
 
 .commited-to-success-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -11,7 +12,7 @@
 }
 
 .commited-to-success-text {
-    display: flex;
+    /* display: flex; */
     max-width: 477px;
     flex-direction: column;
     gap:    29px;
@@ -31,6 +32,12 @@
     background-position: center;
     background-size:cover;
 
-    height: 550px;
+    height: 550px;  
     width: 500px;
 }
+
+/* @media screen and (max-width: 1052px) {
+    .commited-to-success-text {
+        width: 100vw;
+    }
+} */
