--- a/src/app/styles/nav.css
+++ b/src/app/styles/nav.css
@@ -18,3 +18,31 @@ nav ul li{
     list-style-type: none;
     text-decoration: none;
 }
+
+nav .hamburger {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    nav .list {
+        display: none;
+    }
+
+    nav .hamburger {
+        display: block;
+    }
+
+    .nav-popup {
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        z-index: 1;
+        background-color: rgba(255, 255, 255, .5);
+    }
+
+    .hamburger-icon {
+        cursor: pointer;
+        z-index: 999;
+    }
+
+}
