Improve SEO, add slug properties to button, continue on the hamburger expand.

--- a/src/app/styles/CommitedToSuccess.css
+++ b/src/app/styles/CommitedToSuccess.css
@@ -36,8 +36,8 @@
     width: 500px;
 }
 
-/* @media screen and (max-width: 1052px) {
+@media screen and (max-width: 1052px) {
     .commited-to-success-text {
-        width: 100vw;
+        margin-bottom: 55px;
     }
-} */
+}
