--- a/src/app/styles/nav.css
+++ b/src/app/styles/nav.css
@@ -14,6 +14,7 @@ nav ul {
     gap: 45px;
 }
 nav ul li{
+    font-size: 16px;
     cursor: pointer;
     list-style-type: none;
     text-decoration: none;
@@ -33,16 +34,36 @@ nav .hamburger {
     }
 
     .nav-popup {
+        display: flex;
+        justify-content: center;
         position: fixed;
-        width: 100vw;
+        top:0;
+        right:0;
+        width: 60vw;
         height: 100vh;
-        z-index: 1;
-        background-color: rgba(255, 255, 255, .5);
+        background-color: rgba(255, 255, 255, .7);
+        z-index: 999;
+    }
+
+    .hamburger{
+        position: relative;
+       
     }
 
     .hamburger-icon {
+        position: absolute;
+      
+        top: 10px;
+        right: 0px;
+        z-index: 1000;
         cursor: pointer;
-        z-index: 999;
+    }
+
+    .popup-list {
+        margin-top:300px;
+        color: black;
+        display: flex;
+        flex-direction: column;
     }
 
 }
