--- a/src/app/styles/nav.css
+++ b/src/app/styles/nav.css
@@ -32,6 +32,9 @@ nav .hamburger {
     nav .hamburger {
         display: block;
     }
+    nav ul {
+        position: relative;
+    }
 
     .nav-popup {
         display: flex;
@@ -52,10 +55,11 @@ nav .hamburger {
 
     .hamburger-icon {
         position: absolute;
-      
-        top: 10px;
-        right: 0px;
         z-index: 1000;
+        left: 0; 
+        right: 0; 
+        margin-inline: auto; 
+        width: fit-content;
         cursor: pointer;
     }
 
