--- a/src/app/styles/nav.css
+++ b/src/app/styles/nav.css
@@ -1,6 +1,7 @@
 
 
 nav {
+    position: relative;
     padding-top:    21px;
     color: var(--color-heading-light);
 }
@@ -23,8 +24,11 @@ nav ul li{
 nav .hamburger {
     display: none;
 }
+.nav-popup{
+    display: none;
+}
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 500px) {
     nav .list {
         display: none;
     }
@@ -41,33 +45,38 @@ nav .hamburger {
         justify-content: center;
         position: fixed;
         top:0;
-        right:0;
+        right:-250px;
+
+        max-width: 250px;
         width: 60vw;
         height: 100vh;
-        background-color: rgba(255, 255, 255, .7);
-        z-index: 999;
-    }
 
-    .hamburger{
-        position: relative;
-       
+        background-color: rgba(14, 31, 42, .8);
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+        z-index: 999;
+        transition: .2s ease-in-out;
+    }
+    
+    .nav-popup.active {
+        right: 0;
     }
 
     .hamburger-icon {
-        position: absolute;
         z-index: 1000;
-        left: 0; 
-        right: 0; 
-        margin-inline: auto; 
-        width: fit-content;
         cursor: pointer;
     }
 
+    .popup-list li a{
+        font-size: 20px;
+    }
     .popup-list {
         margin-top:300px;
-        color: black;
+        color: var(--color-heading-light);
         display: flex;
         flex-direction: column;
     }
-
+    html, body {
+        overflow-y: var(--allow-scroll);
+    }
 }
