--- a/src/app/styles/footer.css
+++ b/src/app/styles/footer.css
@@ -11,6 +11,10 @@
     font-size: 24px
 }
 
+.first-word-block p {
+    margin-bottom: 0;
+}
+
 @media screen and (max-width: 576px)  {
     .first-word-block {
         margin-bottom: 2rem !important;
