--- a/src/styles/PropertiesListing.css
+++ b/src/styles/PropertiesListing.css
@@ -1,3 +1,24 @@
 .gradient-nav { 
     background-image: linear-gradient(to right, #0A111B, #132A38);
 }
+
+.property-card-container {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    flex-wrap: wrap;
+
+}
+.nav-section {
+    display: flex;
+    justify-content: center;
+
+    margin: 40px 0px;
+}
+
+/* Ipad vertical */
+@media screen and (min-width: 768px){
+    .nav-section {
+        justify-content: flex-end;
+    }
+} 
