--- a/src/styles/PropertyCard.css
+++ b/src/styles/PropertyCard.css
@@ -9,24 +9,31 @@
 }
 
 .property-info {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+
     padding: 20px 20px;
 }
 
-.property-info h3,
-.property-info h4
+.property-info h2,
+.property-info h4,
 .property-info p {
-    margin: 0 0;
+    margin: 0 0 !important;
 }
 
 .property-info .address{
     color: var(--color-body-dark)
 }
 
+.property-image-container {
+    position: relative;
+}
+
 .house-image {
-    width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
+    width: 100%; 
+    height: 180px;
+    object-fit: cover;
 }
 
 .estate-badge-container {
