--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -91,7 +91,19 @@
     width: 350px;
     min-height: 650px;
 }
+.success-card {
+    max-width: 500px;
+    padding: 25px 100px;
+    margin-bottom: -20px;
 
+    color: var(--bs-success-text-emphasis);
+    text-align: center;
+    
+    background-color: var(--bs-success-bg-subtle);
+
+    border: 1px solid var(--bs-success-border-subtle);
+    border-radius: 15px;
+}
 form {
     display: flex;
     flex-direction: column;
