--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -85,25 +85,29 @@
     flex-direction: column;
     justify-content: space-between;
 
-    /* padding: 35px; */
+    padding-top: 35px;
 
     /* border: 1px solid black; */
     width: 350px;
     min-height: 650px;
 }
 .success-card {
-    max-width: 500px;
-    padding: 25px 100px;
-    margin-bottom: -20px;
+    display: none;
+}
 
+.success-card-mobile {
+    max-width: 500px;
+    padding: 10px 80px;
+    margin-bottom: 35px;
     color: var(--bs-success-text-emphasis);
     text-align: center;
     
     background-color: var(--bs-success-bg-subtle);
 
     border: 1px solid var(--bs-success-border-subtle);
-    border-radius: 15px;
+    border-radius: 10px;
 }
+
 form {
     display: flex;
     flex-direction: column;
@@ -183,6 +187,25 @@ label a {
 }
 
 @media screen and (min-width: 1200px) {
+    .success-card {
+        display: block;
+        max-width: 500px;
+        padding: 25px 100px;
+        margin-bottom: -20px;
+    
+        color: var(--bs-success-text-emphasis);
+        text-align: center;
+        
+        background-color: var(--bs-success-bg-subtle);
+    
+        border: 1px solid var(--bs-success-border-subtle);
+        border-radius: 15px;
+    }
+
+    .success-card-mobile {
+        display: none;
+    }
+
     .info-card {
         display: block;
     }
